[gd_scene load_steps=4 format=3 uid="uid://brpr71os1rsp2"]

[ext_resource type="Script" path="res://scenes/characters/leaderDisplay.gd" id="1_fdepn"]
[ext_resource type="Texture2D" uid="uid://hg0or8ccearh" path="res://assets/ui/ui_portraitFrame.png" id="2_xtmjo"]
[ext_resource type="PackedScene" uid="uid://bj5yfd4huc0bl" path="res://scenes/characters/catPortrait.tscn" id="3_5r2wa"]

[node name="memberDisplay" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = -1.0
scale = Vector2(0.880001, 1)
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_fdepn")

[node name="ui_portraitBox" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.0
offset_top = -16.0
offset_right = 598.0
offset_bottom = 295.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_xtmjo")
region_rect = Rect2(30.6872, 10.6183, 424.834, 180.999)
patch_margin_left = 64
patch_margin_top = 57
patch_margin_right = 82
patch_margin_bottom = 72
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ui_portraitBox"]
layout_mode = 2
offset_left = 287.0
offset_top = 33.0
offset_right = 562.0
offset_bottom = 273.0

[node name="memberName_label" type="Label" parent="ui_portraitBox/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.152058, 0.0590819, 0.00187892, 1)
theme_override_font_sizes/font_size = 22
text = "Placeholderclaw"

[node name="description_label" type="Label" parent="ui_portraitBox/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.152058, 0.0590819, 0.00187892, 1)
theme_override_font_sizes/font_size = 18
text = "a cat
"

[node name="memberRole_label" type="Label" parent="ui_portraitBox/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.152058, 0.0590819, 0.00187892, 1)
theme_override_font_sizes/font_size = 18
text = "Warrior"

[node name="memberAge_label" type="Label" parent="ui_portraitBox/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.152058, 0.0590819, 0.00187892, 1)
theme_override_font_sizes/font_size = 18
text = "13 moons"

[node name="CenterContainer" type="CenterContainer" parent="ui_portraitBox"]
layout_mode = 0
offset_left = 45.1363
offset_top = 38.0
offset_right = 109.136
offset_bottom = 102.0
scale = Vector2(1.05196, 0.980398)

[node name="catPortrait" parent="ui_portraitBox/CenterContainer" instance=ExtResource("3_5r2wa")]
layout_mode = 2
